[gd_scene load_steps=58 format=3 uid="uid://c0vnqt6uyxaoa"]

[ext_resource type="Script" path="res://player/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://buvah5pb7ww7p" path="res://player/ControllableCamera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://jmt4y8nkctho" path="res://assets/models/CombatPack.glb" id="2_jydkg"]
[ext_resource type="PackedScene" uid="uid://e2bccij4j7ud" path="res://player/Controls.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="4"]
[ext_resource type="Script" path="res://player/states/Stopped.gd" id="5"]
[ext_resource type="Script" path="res://player/states/Running.gd" id="6"]
[ext_resource type="Script" path="res://player/states/Jumping.gd" id="7"]
[ext_resource type="Script" path="res://player/states/Dashing.gd" id="8"]
[ext_resource type="Script" path="res://player/states/OnGround.gd" id="9"]
[ext_resource type="Script" path="res://player/states/InAir.gd" id="10"]
[ext_resource type="Script" path="res://player/states/Falling.gd" id="11"]
[ext_resource type="Script" path="res://player/states/Crouching.gd" id="12"]
[ext_resource type="Script" path="res://player/states/Swimming.gd" id="14"]
[ext_resource type="Script" path="res://player/states/OnSurface.gd" id="15"]
[ext_resource type="Script" path="res://player/states/Underwater.gd" id="16"]
[ext_resource type="Script" path="res://player/states/Diving.gd" id="17"]
[ext_resource type="Script" path="res://player/states/Surging.gd" id="18"]

[sub_resource type="SphereShape3D" id="21"]

[sub_resource type="CylinderShape3D" id="22"]
height = 0.173798
radius = 0.419353

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42fik"]
animation = &"unarmed-jump-up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_chc45"]
animation = &"unarmed-dash"

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"unarmed-crouch-idle"

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"unarmed-crouch-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="30"]
blend_point_0/node = SubResource("14")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("15")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_xnsw3"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7aer"]
animation = &"unarmed-jump-down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xv5f5"]
animation = &"unarmed-jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rout0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_broob"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njbj0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d0nsn"]
states/unarmed-jump/node = SubResource("AnimationNodeAnimation_xv5f5")
states/unarmed-jump/position = Vector2(532, -4)
states/unarmed-jump-down/node = SubResource("AnimationNodeAnimation_r7aer")
states/unarmed-jump-down/position = Vector2(705, 101)
transitions = ["unarmed-jump", "unarmed-jump-down", SubResource("AnimationNodeStateMachineTransition_rout0"), "unarmed-jump-down", "End", SubResource("AnimationNodeStateMachineTransition_broob"), "Start", "unarmed-jump", SubResource("AnimationNodeStateMachineTransition_njbj0")]
graph_offset = Vector2(-77, -129)

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"unarmed-idle"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"unarmed-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="34"]
blend_point_0/node = SubResource("32")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("33")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeTransition" id="35"]
xfade_time = 0.2
input_0/name = "on-ground"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "in-air"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "crouching"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "swimming"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "surging"
input_4/auto_advance = false
input_4/reset = true

[sub_resource type="AnimationNodeAnimation" id="48"]
animation = &"unarmed-surge-charge"

[sub_resource type="AnimationNodeAnimation" id="49"]
animation = &"unarmed-surge-release"

[sub_resource type="AnimationNodeBlendSpace1D" id="47"]
blend_point_0/node = SubResource("48")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("49")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="45"]
animation = &"unarmed-swim-idle"

[sub_resource type="AnimationNodeAnimation" id="46"]
animation = &"unarmed-swim"

[sub_resource type="AnimationNodeBlendSpace1D" id="44"]
blend_point_0/node = SubResource("45")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("46")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="36"]
graph_offset = Vector2(-1070, -16)
nodes/Animation/node = SubResource("AnimationNodeAnimation_chc45")
nodes/Animation/position = Vector2(-60, 500)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_42fik")
"nodes/Animation 2/position" = Vector2(-800, 200)
nodes/Crouching/node = SubResource("30")
nodes/Crouching/position = Vector2(-360, 260)
nodes/Jump/node = SubResource("AnimationNodeOneShot_xnsw3")
nodes/Jump/position = Vector2(-560, 80)
nodes/Jumping/node = SubResource("AnimationNodeStateMachine_d0nsn")
nodes/Jumping/position = Vector2(-740, 60)
nodes/OnGround/node = SubResource("34")
nodes/OnGround/position = Vector2(-360, -20)
nodes/RootState/node = SubResource("35")
nodes/RootState/position = Vector2(-20, 140)
nodes/Surging/node = SubResource("47")
nodes/Surging/position = Vector2(-360, 540)
nodes/Swimming/node = SubResource("44")
nodes/Swimming/position = Vector2(-360, 400)
nodes/output/position = Vector2(400, 160)
node_connections = [&"output", 0, &"RootState", &"Jump", 0, &"Jumping", &"Jump", 1, &"Animation 2", &"RootState", 0, &"OnGround", &"RootState", 1, &"Jump", &"RootState", 2, &"Crouching", &"RootState", 3, &"Swimming", &"RootState", 4, &"Surging"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_8horh"]

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="19"]
offsets = PackedFloat32Array(0.038, 0.483, 0.908)
colors = PackedColorArray(1, 0.654902, 0, 1, 1, 0.945098, 0.152941, 1, 1, 0.988235, 0.827451, 0)

[sub_resource type="GradientTexture2D" id="20"]
gradient = SubResource("19")

[sub_resource type="ParticleProcessMaterial" id="17"]
emission_shape = 3
emission_box_extents = Vector3(0.281, 0.524, 0)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("20")

[sub_resource type="BoxMesh" id="18"]
size = Vector3(0.04, 0.04, 2)

[sub_resource type="Gradient" id="23"]
offsets = PackedFloat32Array(0, 0.365079, 0.555556, 0.767196)
colors = PackedColorArray(0, 0.294118, 1, 1, 0.0235294, 0.505882, 0.992157, 1, 0.498039, 1, 0.941176, 1, 0.498039, 1, 0.941176, 0)

[sub_resource type="GradientTexture2D" id="24"]
gradient = SubResource("23")

[sub_resource type="Curve" id="25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.34434, 1), 0.0, 0.0, 0, 0, Vector2(0.834906, 0), -4.81818, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="26"]
curve = SubResource("25")

[sub_resource type="ParticleProcessMaterial" id="27"]
direction = Vector3(0, 0, 1)
spread = 15.0
flatness = 0.38
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
scale_curve = SubResource("26")
color = Color(1, 1, 1, 0.537255)
color_ramp = SubResource("24")

[sub_resource type="StandardMaterial3D" id="28"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="29"]
material = SubResource("28")
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="37"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="DeepWaterDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeepWaterDetector"]
shape = SubResource("21")

[node name="WaterSurfaceDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15803, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterSurfaceDetector"]
shape = SubResource("22")

[node name="Skin" type="Node3D" parent="."]

[node name="CombatPack" parent="Skin" instance=ExtResource("2_jydkg")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="Skin/CombatPack/Armature" index="0"]
bones/0/position = Vector3(-0.00303244, 0.990319, 0.00707033)
bones/0/rotation = Quaternion(-0.0318461, -0.0472956, -0.0247351, 0.998067)
bones/1/rotation = Quaternion(0.0287268, 0.0137813, 0.0231728, 0.999224)
bones/2/rotation = Quaternion(0.0104232, 0.00355411, 0.013762, 0.999845)
bones/3/rotation = Quaternion(0.0102002, 0.0037498, 0.0137847, 0.999846)
bones/4/rotation = Quaternion(0.0484286, -0.00150392, 0.00471283, 0.998814)
bones/5/rotation = Quaternion(-0.0695181, 0.0103263, -0.000639698, 0.997527)
bones/7/rotation = Quaternion(0.4587, 0.499364, 0.629537, -0.379359)
bones/8/rotation = Quaternion(0.126442, 0.801691, -0.570984, -0.123618)
bones/9/rotation = Quaternion(0.00989539, -0.707037, 0.00989539, 0.707038)
bones/10/rotation = Quaternion(0.0521131, 0.478897, -0.0145345, 0.876202)
bones/11/rotation = Quaternion(-0.0420419, -0.00498667, -0.0190779, 0.998921)
bones/12/rotation = Quaternion(-0.152843, 0.812142, -0.0148235, 0.56289)
bones/13/rotation = Quaternion(0.0400036, -0.0528788, -0.12859, 0.989479)
bones/14/rotation = Quaternion(9.76758e-09, -7.51871e-08, 6.60146e-08, 1)
bones/15/position = Vector3(-0.0282204, 0.122666, 0.00230741)
bones/15/rotation = Quaternion(0.0662168, 0.000734508, 0.00843096, 0.997769)
bones/16/rotation = Quaternion(0.150998, -1.90735e-06, -0.0154738, 0.988413)
bones/17/rotation = Quaternion(0.0700819, -9.83477e-07, -0.00718173, 0.997515)
bones/18/rotation = Quaternion(0, 0, -1.49012e-08, 1)
bones/19/position = Vector3(-1.17294e-07, 0.127755, -1.13378e-05)
bones/19/rotation = Quaternion(0.136531, -0.00383802, -0.022952, 0.990362)
bones/20/rotation = Quaternion(0.151255, -1.49012e-06, -0.0155002, 0.988373)
bones/21/rotation = Quaternion(0.159933, -1.56462e-06, -0.0163893, 0.986992)
bones/23/position = Vector3(0.0221664, 0.12147, -0.000110649)
bones/23/rotation = Quaternion(0.183251, -0.00465435, -0.0314549, 0.982552)
bones/24/rotation = Quaternion(0.181388, -3.05474e-06, -0.0185881, 0.983236)
bones/25/rotation = Quaternion(0.155213, -2.65241e-06, -0.0159058, 0.987753)
bones/27/position = Vector3(0.0472584, 0.109082, 0.00225169)
bones/27/rotation = Quaternion(0.233868, -0.00344396, -0.0490085, 0.971026)
bones/28/rotation = Quaternion(0.151258, -7.03782e-05, -0.0155004, 0.988373)
bones/29/rotation = Quaternion(0.143498, -4.76837e-07, -0.0147052, 0.989541)
bones/30/rotation = Quaternion(0, 5.96046e-08, -4.47035e-08, 1)
bones/31/rotation = Quaternion(0.477271, -0.477545, -0.63593, -0.37384)
bones/32/rotation = Quaternion(-0.148901, 0.827842, -0.496098, 0.21539)
bones/33/rotation = Quaternion(0.041125, 0.705914, -0.0411247, 0.705906)
bones/34/rotation = Quaternion(0.0423855, -0.571108, 0.0359554, 0.818991)
bones/35/rotation = Quaternion(-0.0367837, 0.0144658, 0.0020579, 0.999216)
bones/36/rotation = Quaternion(-0.121719, -0.819587, 0.0371545, 0.558643)
bones/37/rotation = Quaternion(0.0455579, 0.0460761, 0.161691, 0.984712)
bones/38/rotation = Quaternion(-1.54981e-08, -3.97529e-08, -6.41e-09, 1)
bones/39/position = Vector3(0.0282205, 0.122666, 0.00232896)
bones/39/rotation = Quaternion(0.059513, -0.000990957, -0.0109758, 0.998167)
bones/40/rotation = Quaternion(0.151288, -1.2964e-06, 0.0123243, 0.988413)
bones/41/rotation = Quaternion(0.0702164, -6.55651e-07, 0.00571996, 0.997515)
bones/43/position = Vector3(2.53553e-07, 0.127755, 1.11393e-05)
bones/43/rotation = Quaternion(0.130515, 0.00368796, 0.0189226, 0.991259)
bones/44/rotation = Quaternion(0.151545, -1.02818e-06, 0.0123452, 0.988373)
bones/45/rotation = Quaternion(0.16024, -1.2964e-06, 0.0130536, 0.986992)
bones/46/rotation = Quaternion(-1.49012e-08, 4.47035e-08, -1.49012e-08, 1)
bones/47/position = Vector3(-0.0221662, 0.12147, -8.94357e-05)
bones/47/rotation = Quaternion(0.177452, 0.00449757, 0.0264594, 0.983764)
bones/48/rotation = Quaternion(0.181736, -5.96046e-08, 0.0148046, 0.983236)
bones/49/rotation = Quaternion(0.15551, -1.3411e-07, 0.0126683, 0.987753)
bones/50/rotation = Quaternion(2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/51/position = Vector3(-0.0472583, 0.109082, 0.00227081)
bones/51/rotation = Quaternion(0.228493, 0.00339758, 0.0429811, 0.97259)
bones/52/rotation = Quaternion(0.151548, 1.14739e-06, 0.0123456, 0.988373)
bones/53/rotation = Quaternion(0.143773, -1.98185e-06, 0.0117121, 0.989541)
bones/54/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/55/rotation = Quaternion(0.135828, 0.0746609, 0.985113, -0.0743563)
bones/56/rotation = Quaternion(-0.0393011, 0.993479, -0.106087, 0.014151)
bones/57/rotation = Quaternion(-0.0426933, 0.711496, -0.699576, 0.0504311)
bones/58/rotation = Quaternion(-9.76624e-08, 0.999075, 0.0429963, -3.63744e-09)
bones/60/rotation = Quaternion(-0.0922721, -0.0157163, 0.99524, -0.0271474)
bones/61/rotation = Quaternion(0.0335873, 0.994278, -0.0575965, -0.0834558)
bones/62/rotation = Quaternion(0.0110214, 0.680794, -0.73191, -0.0265762)
bones/63/rotation = Quaternion(1.83457e-07, 0.99811, 0.0614534, -2.54027e-08)
bones/64/position = Vector3(0.00141798, 0.0999746, 0.00175012)

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
tree_root = SubResource("36")
anim_player = NodePath("../CombatPack/AnimationPlayer")
active = true
parameters/Crouching/blend_position = 0
parameters/Jump/active = false
parameters/Jump/request = 0
parameters/Jumping/playback = SubResource("AnimationNodeStateMachinePlayback_8horh")
parameters/OnGround/blend_position = 0.0
parameters/RootState/current_state = "on-ground"
parameters/RootState/transition_request = ""
parameters/RootState/current_index = 0
parameters/Surging/blend_position = 0.0
parameters/Swimming/blend_position = 0.0

[node name="VfxDash" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984, 1.12412)
material_override = SubResource("16")
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.34
visibility_aabb = AABB(-1.39, -2.508, -3.479, 2.781, 5.015, 6.958)
local_coords = true
process_material = SubResource("17")
draw_pass_1 = SubResource("18")

[node name="VfxSurge" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01641, 0)
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
randomness = 1.0
visibility_aabb = AABB(-2, -1.21914, -3, 4, 2.43828, 6)
process_material = SubResource("27")
draw_pass_1 = SubResource("29")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -4.37114e-09)
shape = SubResource("37")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ControllableCamera" parent="CamRoot" instance=ExtResource("2")]

[node name="Controls" parent="." instance=ExtResource("3")]

[node name="Movement" type="Node" parent="."]
script = ExtResource("4")
initial_state = NodePath("OnGround")

[node name="Crouching" type="Node" parent="Movement"]
script = ExtResource("12")

[node name="Stopped" type="Node" parent="Movement/Crouching"]
script = ExtResource("5")

[node name="Moving" type="Node" parent="Movement/Crouching"]
script = ExtResource("6")
move_speed = 4.0
sprint_speed = 4.0
turn_speed = 8.0
acceleration = 30.0
cam_follow_speed = 4.0

[node name="OnGround" type="Node" parent="Movement"]
script = ExtResource("9")

[node name="Stopped" type="Node" parent="Movement/OnGround"]
script = ExtResource("5")

[node name="Running" type="Node" parent="Movement/OnGround"]
script = ExtResource("6")

[node name="Dashing" type="Node" parent="Movement/OnGround"]
script = ExtResource("8")

[node name="InAir" type="Node" parent="Movement"]
script = ExtResource("10")

[node name="Falling" type="Node" parent="Movement/InAir"]
script = ExtResource("11")

[node name="Jumping" type="Node" parent="Movement/InAir"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Movement/InAir"]
script = ExtResource("8")
dash_power = 180.0

[node name="Swimming" type="Node" parent="Movement"]
script = ExtResource("14")

[node name="Diving" type="Node" parent="Movement/Swimming"]
script = ExtResource("17")

[node name="OnSurface" type="Node" parent="Movement/Swimming"]
script = ExtResource("15")

[node name="Underwater" type="Node" parent="Movement/Swimming"]
script = ExtResource("16")

[node name="Surging" type="Node" parent="Movement/Swimming"]
script = ExtResource("18")

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="SurgeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_entered"]
[connection signal="area_exited" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_exited"]
[connection signal="area_entered" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_entered"]
[connection signal="area_exited" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_exited"]

[editable path="Skin/CombatPack"]
